add lib folder as psr-4 without namespace

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
       "name": "Witali Mik",
       "email": "witalimik@web.de"
     }
-  ]
+  ],
+  "autoload": {
+    "psr-4": { "": "lib/" }
+  }
 }
